--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dom_residential",
   "version": "0.1.0",
+  "homepage": "https://porosh2002.github.io/dom_residential",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
@@ -13,6 +14,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
